testdata/golden/sema/valid/user_type_simple.fmt
// scenario: simple alias to int used in a function
type UserId = int;

fn use_user(id: UserId) -> UserId {
    return id;
}
