testdata/golden/sema/invalid/fn_return_type_mismatch.fmt
// scenario: returned expression type does not match the function signature
// Updated to use 'nothing' which has no __to conversion to int
fn wrong_return() -> int {
    return nothing;
}
